<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>curiosity_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo worlds and ROS2 launch descriptions for Curiosity Mars Demo</description>
  <maintainer email="franklinselva10@gmail.com">franklinselva</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>curiosity_description</depend>
  <depend>rclcpp</depend>
  <depend>ament_cmake</depend>
  <depend>ament_cmake_python</depend>
  <depend>ros_gz</depend>

  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
