<?xml version="1.0"?>
<package format="2">
  <name>ingenuity_description</name>
  <version>0.1.0</version>
  <description>ingenuity_description</description>

  <maintainer email="barisyazici@alumni.sabanciuniv.edu">Baris Yazici</maintainer>

  <license>Apache License 2.0</license>
  <author>Baris Yazici</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
