<?xml version="1.0"?>
<package format="3">
  <name>ingenuity_mars_helicopter</name>
  <version>0.1.0</version>
  <description>Metapackage for ingenuity flight simulator related packages</description>
  <maintainer email="barisyazici@alumni.sabanciuniv.edu">Baris Yazici</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>helicopter_flight_control</exec_depend>
  <exec_depend>helicopter_flight_simulation</exec_depend>
  <exec_depend>ingenuity_bringup</exec_depend>
  <exec_depend>ingenuity_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>