<?xml version="1.0"?>
<package format="3">
  <name>lunarsim_gz_worlds</name>
  <version>0.0.0</version>
  <description>Gazebo Worlds for Moon World Simulation using Ignition Gazebo</description>
  <maintainer email="founders@elementrobotics.space">Element Robotics</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>leo_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
